--- a/SehirOtomasyonuMvc/Views/Shared/_LayoutAdmin.cshtml
+++ b/SehirOtomasyonuMvc/Views/Shared/_LayoutAdmin.cshtml
@@ -104,7 +104,7 @@
                 </a>
                 <div id="collapsePages" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item active" href="/Admin/Home/Index">ŞehirEkle </a> @*buraya ekle isimlerine bakarak*@
+                        <a class="collapse-item active" href="/Admin/Home/Index">ŞehirEkle </a> 
                         <a class="collapse-item active" href="/Sehir/Index">ŞehirListele </a>
                         <a class="collapse-item active" href="/Sehir/Duzenle">ŞehirBilgileriDüzenle </a>
                         <a class="collapse-item active" href="/Bolge/Index">BölgelerEkle </a>
